Finished responsive css for navbar and announcment

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,8 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
+    <script src="https://unpkg.com/akar-icons-fonts"></script>
+
     <title>Coffee House</title>
   </head>
   <body>
